# ytdl

./: .gitignore  README.md  main.py  pyproject.toml  queue.csv
tests/: test_captions.py  test_cli.py  test_extract.py
ytdl/: __init__.py  cli.py  doctor.py
